2010-07-22 Chris Morley

	*src/formats/mdlformat.cpp: right align atom numbers in A line, as
	prompted by Igor Filippov.
	
	* include/openbabel/tokenst.h: add functor to help withr deleting
	containers of pointers.

2010-07-21  Noel O'Boyle

	* include/openbabel/math/align.h: Add Doxygen docs. Update the default
	constructor.
	* src/math/align.cpp: Update the default constructor.

2010-07-21  Noel O'Boyle

	* src/formats/povrayformat.cpp: POV-ray format has been neglected for
	a long time. Based on Steven Wathen's comments on openbabel-discuss
	(28/11/2009), I have gotten it to work. I also added options for
	checkerboard, a mirror sphere and sky.

2010-07-21  Noel O'Boyle

	* src/CMakeLists.txt: Only compile ops/conformer.cpp and 
	src/conformersearch.cpp if Eigen2 is found

2010-07-19 Chris Morley

	* src/formats/inchiformat.cpp: make suitable for InChI 1.03.
	Allow InChI options and re-enable -M and -F options for non-
	standard InChI.
	
	* include/openbabel/inchiformat.h: improve Description()
	
	* windows-vc2008/libs/i386/libinchi.dll, libinchi.lib: add
	* windows-vc2008/libs/i386/libstdinchi.dll, libstdinchi.lib: remove
	
	* windows-vc2008/default_build.bat: change from libstdinchi.lib
	 to libinchi

	* src/GUI/OBGUI.cpp,src/GUI/OBGUI.h: add menu item to shrink
	window to minimum useful size.

2010-07-19 Chris Morley

	* include/openbabel/plugin.h: reverted the last change. Something
	seems to have gone wrong with the deobfuscation of the	MAKE_PLUGIN
	macro and was causing a crash in the GUI when formats were changed.
	I did not find out the precise cause, but it seemed to be around the
	default op. The difficulty of debugging	this illustrates that using a
	macro here is is not nice; we could do with a more C++ way of making
	a plugin. Tim has suggested a possible approach
	http://openbabel.org/wiki/Plugins
	
	There is already an annotated version of the contents of the macro
	at the end of the op.h, but it might not be up to date. 
	